Remove Jest flag from Vitest command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm run lint
 
       - name: Rodar testes
-        run: npm run test -- --runInBand=false
+        run: npm run test
 
       - name: Rodar build
         run: npm run build
